--- a/index.html
+++ b/index.html
@@ -5,23 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-    <title>ENGEO & TOPOACAP</title>
+    <title>ENGEO & TOPOCAP</title>
 </head>
 <body>
-    <header>
-        <div class="cabecalho">
-            <img class="cabecalho_imagem" src="imgs/logo.jpg" alt="Logo Empresa">
-            <div class="cabecalho_texto">
-            <h2 class="cabecalho_texto-titulo1">GRUPO</h2>
-            <h1 class="cabecalho_texto-titulo2">ENGEO & TOPOACAP</h1>
-            <h3 class="cabecalho_texto-titulo3">Georreferenciamente e Engenharia</h3>
-            </div>
-            <button class="cabecalho_botao">
-                <a class="cabecalho_botao-link" href="">ENTRAR EM CONTATO</a>
+    <header class="cabecalho">
+        <div class="empresa">
+            <img class="empresa_logo" src="imgs/Logo.svg" alt="Logo da Empresa">
+            <h1 class="empresa_titulo">ENGEO & TOPOCAP</h1>
+            <h3 class="empresa_descricao">Georreferenciamento e Engenharia</h3>
+        </div>
+        <div class="botao">
+            <button class="botao_contato">
+                <a class="botao_contato-link" href="#">ENTRAR EM CONTATO</a>
             </button>
         </div>
-        <hr>
     </header>
 </body>
 </html>
