Estilização do Header

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
         </div>
         <div class="botao">
             <button class="botao_contato">
-                <a class="botao_contato-link" href="#">ENTRAR EM CONTATO</a>
+                <a class="botao_contato-link" href="#e">ENTRAR EM CONTATO</a>
             </button>
         </div>
     </header>
+    <main>
+        
+    </main>
 </body>
 </html>
